# myd-3.4-plus

./: .gitignore  History  INSTALL  Makefile.am  Makefile.in  README  README.md  acconfig.h  config.h.in  configure  configure.in  install-gene95.sh  pdic2tsv.sh
src/: Makefile.am  Makefile.in  edit.c  edit.h  getsel.c  getsel.h  main.c  myd.c  myd.h  term.c  term.h
