dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/myd.c)
AM_INIT_AUTOMAKE(myd, 3.4)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_XTRA

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.
AC_TYPE_SIGNAL

dnl 
AC_DEFINE(HOME_DIC_FILENAME, ".myd/dict.txt")
AC_DEFINE(SYSTEM_DIC_PATH, PKGDATADIR "/dict.txt")

AC_DEFINE(DEFAULT_THEME, 0)


AC_OUTPUT(Makefile src/Makefile)
